<resources>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Push notifications</string>
    <string name="sign_up_what_is_your_name">Welcome to YFC.\nWhat is your name?</string>
    <string name="sign_up_and_surname">And Surname?</string>
    <string name="sign_up_nice_to_meet_you">Nice to meet you,\n%s</string>
    <string name="sign_up_we_need_your_email">We need your email to welcome you to the YFC network</string>
    <string name="sign_up_terms_and_privacy_policy">By going through the registration process, you agree to our <a href="https://yourfitness.coach/terms-conditions"><b>Terms &amp; Conditions</b></a> and verify you have read <a href="https://yourfitness.coach/privacy-policy"><b>Privacy Policy</b></a>.</string>
    <string name="sign_up_lets_confirm_its_you">Let\'s confirm it\'s you</string>
    <string name="sign_up_please_share_your_phone">Please share your phone number so we can send you a verification code</string>
    <string name="sign_up_please_enter_code_we_sent">Please enter the code we sent you</string>
    <string name="sign_up_we_sent_the_code_to">We\'ve sent the code to &lt;br;&gt;&lt;b&gt;%s&lt;/b&gt;</string>
    <string name="sign_up_resend_code">Get another code</string>
    <string name="sign_up_resend_code_timer">Resend code: %ds</string>
    <string name="sign_up_resend_code_whatsapp_timer">Resend code to Whatsapp: %ds</string>
    <string name="sign_up_send_code_via">Send code via</string>
    <string name="sign_up_sms">SMS</string>
    <string name="sign_up_code_was_sent_to_phone">A code was sent to the phone\n%s</string>
    <string name="sign_up_what_is_your_birthday"><font color="#C5D4E2">When is your</font>\nbirthday?</string>
    <string name="sign_up_this_help_us_know_when_your_birthday">When were you born?</string>
    <string name="sign_up_what_is_your_gender"><font color="#C5D4E2">What’s your</font>\ngender?</string>
    <string name="sign_up_we_have_some_female_only_sports">We have some female-only spots to suggest here</string>
    <string name="sign_up_add_your_photo"><font color="#C5D4E2">Add your</font>\nphoto</string>
    <string name="sign_up_be_true_to_you">Smile!</string>
    <string name="sign_up_this_is_for_your_access_pass">This is for your access pass so they can recognise you at the gym/studio.</string>
    <string name="sign_up_do_you_have_a_corporate_code">Do you have a referral, influencer or corporate code?</string>
    <string name="sign_up_activation_code">Enter code</string>
    <string name="sign_up_enter_it_here">Enter it here</string>
    <string name="sign_up_invalid_corporate_code">Corporate code is invalid</string>
    <string name="sign_up_error_referral_code_title">The code you entered is a referral code</string>
    <string name="sign_up_error_challenge_code_title">The code you entered is a challenge code</string>
    <string name="sign_up_error_gender_msg">The code you provided is for a female only challenge. Please make sure that you have selected the correct gender.</string>
    <string name="sign_up_success_corporate_code_title">You\'ve entered a valid corporate code</string>
    <string name="sign_up_success_influencer_code_title">You\'ve entered a valid influencer code</string>
    <string name="sign_up_success_corporate_code_msg">As a %s affiliate you are eligible for an exclusive subscription rate of %s</string>
    <string name="sign_up_success_influencer_code_msg">You\'ve entered a valid influencer code. You are now eligible for an exclusive subscription rate of %s</string>
    <string name="sign_up_invalid_corporate_code_msg">Please check the code and retry or go back to registration process</string>
    <string name="sign_up_error_referral_code_msg">You can only use your referral code when you buy a YFC Gym subscription. Don\'t worry, buying a subscription and accessing all of our facilities is just a few taps away.</string>
    <string name="sign_up_error_challenge_code_msg">You can only use your challenge code when joining a YFC challenge. Don\'t worry, joining this challenge is a couple of taps away.</string>
    <string name="sign_up_success_challenge_code_msg">Great news! You\'ve successfully joined the %s challenge and can now monitor your progress on the %s leaderboard.</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="code">Code</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="unknown">Unknown</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="camera">Camera</string>
    <string name="log_in">Log In</string>
    <string name="characters_phone_number">01234567890 +-()</string>
    <string name="okay">Okay!</string>
    <string name="thanks">Thanks!</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_skip_step">Skip this step</string>
    <plurals name="credits">
        <item quantity="one">%d credit</item>
        <item quantity="other">%d credits</item>
    </plurals>
    <string name="bonus_credits">%d bonus credits</string>
    <string name="class_booked">Class booked</string>
    <string name="spots_available">%d spots available</string>
    <string name="no_spots_available">No spots available</string>
    <string name="btn_book_credits">Book | %d credits</string>
    <string name="no_classes_available">No classes available</string>
    <string name="rebook_title">Re-book %s</string>
    <string name="buy_credits">Buy Credits</string>
    <string name="welcome_slider_screen_have_account">I have an account</string>
    <string name="welcome_slider_screen_sign_up_button">Sign up</string>
    <string name="welcome_slider_screen_got_it_button">Got it!</string>
    <string name="welcome_slider_screen_cancel_anytime_text">No Contract\nCancel Anytime</string>
    <string name="welcome_slider_screen_one_app_text"/>
    <string name="welcome_slider_screen_premium_gym_locations_text">20+ premium \nGym Locations</string>
    <string name="welcome_slider_screen_smash_your_text" />
    <string name="welcome_slider_screen_leaderboard_challenge_text">Monthly Leaderboard\nChallenges</string>
    <string name="welcome_slider_screen_connect_your_text"/>
    <string name="welcome_back_screen_log_in_button">Log In</string>
    <string name="welcome_back_screen_dont_have_account_button">I don’t have an account</string>
    <string name="welcome_back_screen_welcome_back_text">Welcome back!</string>
    <string name="welcome_back_screen_we_missed_text">We missed working out with you, let\'s get you settled in</string>
    <string name="bottom_menu_progress_text">Progress</string>
    <string name="bottom_menu_map_text">Map</string>
    <string name="bottom_menu_profile_text">Profile</string>
    <string name="bottom_menu_more_text">More</string>
    <string name="pt_bottom_menu_dashboard_text">Dashboard</string>
    <string name="pt_bottom_menu_calendar_text">Calendar</string>
    <string name="more_screen_more_awesomeness_text">More awesomeness</string>
    <string name="more_screen_we_love_surprise_text">We love to surprise you - look out for these new things!</string>
    <string name="more_screen_coming_soon_text">Coming soon</string>
    <string name="more_screen_yfc_shop_text">YFC Shop</string>
    <string name="more_screen_faq_text">F.A.Q.</string>
    <string name="more_screen_all_the_text">All the hacks you should know</string>
    <string name="more_screen_learn_more_text">Learn More</string>
    <string name="more_screen_fitness_calendar_text">Fitness Calendar</string>
    <string name="more_screen_fitness_calendar_text2">My PT Calendar</string>
    <string name="more_screen_manage_your_text">Manage your PT sessions</string>
    <string name="more_screen_go_to_text">Go to Calendar</string>
    <string name="more_screen_go_to_challenges_text">Go to Challenges</string>
    <string name="more_screen_challenges_text">Challenges</string>
    <string name="more_screen_compete_with_users_text">Compete with other YFC users</string>
    <string name="more_screen_go_to_shop">Go to Shop</string>
    <string name="more_screen_get_help">Get help</string>
    <string name="more_screen_get_help_msg">Contact our support center</string>
    <string name="more_screen_get_help_action">Contact us</string>
    <string name="faq_screen_faq_text">F.A.Q.</string>
    <string name="faq_screen_first_time_text">First time here?</string>
    <string name="faq_screen_how_to_earn_coins_text">How to earn coins?</string>
    <string name="faq_screen_how_to_earn_credits_text">How to earn credits?</string>
    <string name="faq_screen_yfc_partners_text">YFC partners</string>
    <string name="faq_screen_how_to_join_challenge">How to join a challenge?</string>
    <string name="faq_screen_how_to_join_community">Join the YFC Community</string>
    <string name="faq_screen_how_to_buy_a_gym_text">How to buy a\ngym\nsubscription?</string>
    <string name="faq_screen_how_to_buy_a_gym_normal_text">How to buy a gym subscription?</string>
    <string name="faq_screen_how_to_buy_class_text">How to buy class credits?</string>
    <string name="faq_screen_how_to_buy_pt_sessions">How to buy PT sessions?</string>
    <string name="faq_screen_how_to_book_pt_sessions">How to book PT sessions?</string>
    <string name="faq_screen_how_to_manage_pt_sessions">How to manage PT sessions?</string>
    <string name="faq_screen_how_to_spend_coins">How to spend your YFC coins?</string>
    <string name="faq_screen_how_to_manage_your_text">How to manage your fitness calendar?</string>
    <string name="faq_screen_stuck_need_text">Stuck! Need Help?</string>
    <string name="faq_screen_how_to_use_your_class_text">How to use your Class Access card?</string>
    <string name="faq_screen_how_to_use_your_gym_text">How to use your Gym Access card?</string>
    <string name="map_screen_sign_me_up_text">Sign me up!</string>
    <string name="map_screen_head_over_text">Head over to Settings, then give the app access to your geolocation, otherwise we can\’t show you gyms near you.</string>
    <string name="map_screen_what_is_your_location_text">What is your location?</string>
    <string name="map_screen_go_to_settings_text">Go to Phone Settings</string>
    <string name="map_screen_your_gym_subscription">Your gym subscription isn\'t active right now and you don\'t have any classes booked</string>
    <string name="map_screen_dont_delay">Don\'t delay, kickstart your fitness journey now!</string>
    <string name="map_screen_show_me_the_map">Show me the map</string>
    <string name="points_hint_how_points_work">How points are calculated?</string>
    <string name="points_hint_you_get_coins_for_points">Get points for steps taken and kcal burned recorded from a recognized fitness wearable synced with your </string>
    <string name="points_hint_up_your_earning_potential">How do we count?</string>
    <string name="points_hint_ok_cool">Ok cool!</string>
    <string name="leaderboard_screen_week_text">Week</string>
    <string name="leaderboard_screen_month_text">Month</string>
    <string name="leaderboard_screen_all_time_text">All time</string>
    <string name="update_action">Update to the latest version</string>
    <string name="update_title">Time to update!</string>
    <string name="update_msg">We have added new features and functionality to enhance your experience. In order to continue using the app, please update it.</string>
    <string name="or">or</string>
    <string name="apple_health">Apple Health</string>
    <string name="google_fit">Google Fit</string>
    <string name="government">Government</string>
</resources>