<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_dashboard"
        android:icon="@drawable/ic_progress"
        android:title="@string/pt_bottom_menu_dashboard_text" />

    <item
        android:id="@+id/fragment_pt_role_training_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/pt_bottom_menu_calendar_text" />

    <item
        android:id="@+id/fragment_lock"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/fragment_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/bottom_menu_profile_text" />

    <item
        android:id="@+id/fragment_more"
        android:icon="@drawable/ic_more"
        android:title="@string/bottom_menu_more_text" />

</menu>