<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_progress" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_title"
        style="@style/Widget.YFC.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_3.5x"
        android:gravity="center"
        android:text="@string/sign_up_what_is_your_gender"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_message"
        style="@style/Widget.YFC.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_3x"
        android:layout_marginTop="@dimen/spacing_1x"
        android:gravity="center"
        android:text="@string/sign_up_we_have_some_female_only_sports"
        android:textAppearance="@style/TextAppearance.YFC.Body1"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <RadioGroup
        android:id="@+id/radio_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_2.5x"
        app:layout_constraintBottom_toTopOf="@id/button_next"
        app:layout_constraintTop_toBottomOf="@id/text_message"
        app:layout_constraintVertical_bias="0">

        <RadioButton
            android:id="@+id/radio_male"
            style="@style/Widget.YFC.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radio_female"
            style="@style/Widget.YFC.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_0.75x"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/radio_other"
            style="@style/Widget.YFC.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_0.75x"
            android:text="@string/other" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_next"
        style="@style/Widget.YFC.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginBottom="@dimen/spacing_1x"
        android:text="@string/next"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>