<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hard_update_1"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/spacing_1x"
    android:paddingBottom="@dimen/spacing_4x">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yfc_logo_02_1" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.YFC.Heading1"
        android:textColor="@color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/message"
        style="@style/Widget.YFC.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_1x"
        android:layout_marginBottom="@dimen/spacing_2x"
        android:text="@string/update_msg"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.YFC.Subheading6"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_got_it"
        style="@style/Widget.YFC.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/update_action" />

</LinearLayout>