<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_what_is_your_location"
        style="@style/Widget.YFC.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_1x"
        android:text="@string/map_screen_what_is_your_location_text"
        app:layout_constraintBottom_toTopOf="@id/text_head_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_head_over"
        style="@style/Widget.YFC.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_2x"
        android:gravity="center_horizontal"
        android:text="@string/map_screen_head_over_text"
        android:textAppearance="@style/TextAppearance.YFC.Body1"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_go_to_settings"
        style="@style/Widget.YFC.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_1x"
        android:text="@string/map_screen_go_to_settings_text"
        app:icon="@drawable/ic_icon_send_mail_arrow"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_head_over" />

</androidx.constraintlayout.widget.ConstraintLayout>