<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_error"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="@dimen/spacing_2x"
        android:src="@drawable/image_went_wrong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_gym_subscription"
        style="@style/Widget.YFC.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginTop="@dimen/spacing_2x"
        android:layout_marginBottom="@dimen/spacing_1x"
        android:gravity="center_horizontal"
        android:text="@string/map_screen_your_gym_subscription"
        android:textAppearance="@style/TextAppearance.YFC.Subheading3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/text_work_out_in_all"
        app:layout_constraintTop_toBottomOf="@id/image_error" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_work_out_in_all"
        style="@style/Widget.YFC.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginBottom="@dimen/spacing_1.5x"
        android:gravity="center_horizontal"
        android:text="@string/map_screen_dont_delay"
        android:textAppearance="@style/TextAppearance.YFC.Body1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/button_sign_me_up"
        app:layout_constraintTop_toBottomOf="@id/text_gym_subscription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_me_up"
        style="@style/Widget.YFC.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginBottom="@dimen/spacing_1x"
        android:text="@string/map_screen_sign_me_up_text"
        app:layout_constraintBottom_toTopOf="@id/text_show_map" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_show_map"
        style="@style/Widget.YFC.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_1x"
        android:layout_marginBottom="@dimen/spacing_2x"
        android:gravity="center_horizontal"
        android:text="@string/map_screen_show_me_the_map"
        android:textAppearance="@style/TextAppearance.YFC.Heading2"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>